--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="https://media.istockphoto.com/id/1433122206/vector/question-bubbles-line-icon-vector.jpg?s=612x612&w=0&k=20&c=YOlrHcUKszzjlcU1lLc4XN-hJYUITbTauf1XrQr_PIk=" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Internshala-Quiz-Game</title>
   </head>
   <body>
     <div id="root"></div>
